Aggiunti popup a tutti i passaggi di gioco, spostata lista citta

--- a/Lezione7/index.html
+++ b/Lezione7/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="splash" class="pagina">
 		<p>Time For Africa</p>
-		<img src="./splash.png">
+		<img src="./assets/splash.png">
 		<p>Un gioco sulle migrazioni</p>
 	</div>
 
@@ -21,6 +21,8 @@
 	<div id="mappa" class="pagina nascosta">
 		<div id="contenitore-mappa"></div>
 		<button id="bottone-gioco-quit">QUIT</button>
+
+		<div id="popup-gioco"></div>
 	</div>
 
 	<div id="finale" class="pagina nascosta">
